// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericSelectField  should render  snapshots for  loading items 1`] = `
<SelectField
  autoWidth={false}
  disabled={true}
  dropDownMenuProps={
    Object {
      "animated": false,
    }
  }
  floatingLabelText="Select item loading..."
  fullWidth={false}
  id="selectedValue"
  maxHeight={250}
  multiple={false}
  name="selectedValue"
  onChange={[Function]}
  value={null}
>
  <MenuItem
    checked={false}
    desktop={false}
    disabled={false}
    insetChildren={false}
    key="select_field_0"
    primaryText="Item 1"
    value="Item 1"
  />
  <MenuItem
    checked={false}
    desktop={false}
    disabled={false}
    insetChildren={false}
    key="select_field_1"
    primaryText="Item 2"
    value="Item 2"
  />
  <MenuItem
    checked={false}
    desktop={false}
    disabled={false}
    insetChildren={false}
    key="select_field_2"
    primaryText="Item 3"
    value="Item 3"
  />
</SelectField>
`;

exports[`GenericSelectField  should render  snapshots for  no items 1`] = `
<SelectField
  autoWidth={false}
  disabled={false}
  dropDownMenuProps={
    Object {
      "animated": false,
    }
  }
  floatingLabelText="Select item "
  fullWidth={false}
  id="selectedValue"
  maxHeight={250}
  multiple={false}
  name="selectedValue"
  onChange={[Function]}
/>
`;

exports[`GenericSelectField  should render  snapshots for  one item 1`] = `
<SelectField
  autoWidth={false}
  disabled={false}
  dropDownMenuProps={
    Object {
      "animated": false,
    }
  }
  floatingLabelText="Select item "
  fullWidth={false}
  id="selectedValue"
  maxHeight={250}
  multiple={false}
  name="selectedValue"
  onChange={[Function]}
>
  <MenuItem
    checked={false}
    desktop={false}
    disabled={false}
    insetChildren={false}
    key="select_field_0"
    primaryText="Item 1"
    value="Item 1"
  />
</SelectField>
`;
